--- a/index.html
+++ b/index.html
@@ -6,12 +6,9 @@
         <meta http-equiv="Content-Style-Type" content="text/css" />
         <meta http-equiv="Content-Script-Type" content="text/javascript" />
         <meta name="description" content="Nobuhiko Hayashi, Sound Making for Film & Arts" />
-        <meta name="keywords" content="Nobuhiko Hayashi, 林暢彦, はやしのぶひこ, sound, 音響" />
+        <meta name="keywords" content="Nobuhiko Hayashi, 林暢彦, はやしのぶひこ, 蝸牛舎, sound, 音響" />
         <meta name="viewport" content="width=device-width,initial-scale=1">
-            <title>Nobuhiko Hayashi info</title>
-            <link href="css/reset.css" rel="stylesheet" type="text/css" />
-            <link href="css/common.css" rel="stylesheet" type="text/css" />
-            <link href="css/style-index.css" rel="stylesheet" type="text/css" />
+            <title>Kagyu Sha</title>
             <!--<link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
             <link href="https://fonts.googleapis.com/css?family=Noto+Serif+JP&display=swap&subset=japanese" rel="stylesheet">-->
@@ -19,10 +16,8 @@
 
 
     <body>
-        <header>
-        <div id="header">
-        <dl>
-       <h1 class="page_title">test</h1>
+        <header></header>
+       <h1 class="page_title">蝸牛舎</h1>
        <dl></dl>
         <footer class="footerFloat"></footer>
     </body>
